--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="header">
-      <div class="header-logo">Ngoding</div>
+      <div class="header-logo">Mengoding</div>
       <div class="header-list">
         <ul>
           <li>Tentang</li>
@@ -59,7 +59,7 @@
     </div>
 
     <div class="footer">
-      <div class="footer-logo">Progate</div>
+      <div class="footer-logo">Mengoding</div>
       <div class="footer-list">
         <ul>
           <li>Tentang</li>
