--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
     </div>
 
     <div class="footer">
-      <div class="footer-logo">Mengoding</div>
+      <div class="footer-logo">Bismilla Pinter</div>
       <div class="footer-list">
         <ul>
           <li>Tentang</li>
