--- a/projects.html
+++ b/projects.html
@@ -65,6 +65,7 @@
           <li>Tentang</li>
           <li>Karier</li>
           <li>Hubungi Kami</li>
+          <li>Halo</li>
         </ul>
       </div>
     </div>
